housekeeping for stale RESV_CHECKs